--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@
       const pcComponents = [
         {
           type: "CPU",
-          name: "AMD Ryzen 5 5600G Processor with Radeon Graphics",
-          price: 14800,
-          img: "https://www.startech.com.bd/image/cache/catalog/processor/amd/ryzen-5-5600g/ryzen-5-5600g-500x500.jpg",
-          link: "",
+          name: "AMD Ryzen 5 5500 Processor",
+          price: 8300,
+          img: "https://www.startech.com.bd/image/cache/catalog/processor/amd/5600x/5600x-001-500x500.jpg",
+          link: "https://www.google.com/search?sca_esv=ca4c92f34e7bc8c4&sxsrf=AE3TifNYc5lAIYD2em86svUSI8h0MfX3Hw:1759590158441&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa_uc-TjDJYRtLl-RKXlVOTL5mI-WiiglTJRFGvAEXXnfLCt0BkYsC0T-4-k-mSSl9LqZBVj0n-XtnANItk--Gvyv2TNedRXhVojzV4R3s6nqe8F-Yg&q=AMD+Ryzen+5+5600+Processor&sa=X&ved=2ahUKEwjkm-CS6IqQAxVS4TgGHR2UB1MQtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Motherboard",
-          name: "MSI B450M-A PRO MAX II AMD AM4 Motherboard",
-          price: 8900,
+          name: "MSI B450M-A PRO MAX II",
+          price: 8500,
           img: "https://www.startech.com.bd/image/cache/catalog/motherboard/msi/b450m-a-pro-max-ii/b450m-a-pro-max-ii-01-500x500.webp",
-          link: "https://www.google.com/search?sca_esv=1001961491ba09a8&sxsrf=AE3TifOcVz2n4p0Dar7E-4LJ-k24lHKDDA:1759495754670&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1aWGQOelbxvw0PKo40QtwvZMGAT8mh52EQduMaEwrkL_OWJKMRsfwjGjYSpRBlZ1JDaBjTRFJHK6nc3h7Df_ewEX8XvmvbWbC3KO9R3Wzz8-jDjRXDvvSfLP0DDBhoo8LSWAeOg&q=msi+b450m-a+pro+max+ii+amd+am4+motherboard&sa=X&sqi=2&ved=2ahUKEwjVpcO7iIiQAxVkR2wGHZ58FFgQtKgLegQIGBAB&biw=1536&bih=776&dpr=1.25",
+          link: "https://www.google.com/search?sca_esv=af12d5cdec951c56&sxsrf=AE3TifOciZRA5zT9Yrp9d6SNHSvR6CF4UQ:1759602458512&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=MSI+B450M-A+PRO+MAX+II&sa=X&ved=2ahUKEwiO9_D7lYuQAxVnzTgGHZfUAYYQtKgLegQIFxAB&cshid=1759602661467680&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "RAM",
-          name: "OCPC XT II DDR4 3200MHz 16GB Desktop RAM (black)",
-          price: 5000,
+          name: "OCPC XT II DDR4 3200MHz 8GB Desktop RAM (2 x 8GB)",
+          price: 6200,
           img: "https://www.startech.com.bd/image/cache/catalog/ram/ocpc/xt-ii-ddr4-3200-16gb/xt-ii-ddr4-3200-16gb-500x500.webp",
-          link: "https://www.google.com/search?sca_esv=1001961491ba09a8&sxsrf=AE3TifM8Dc88Lb9GdNGO5UnR9J-U_A1MbA:1759495860799&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1aWGQOelbxvw0PKo40QtwvZMGAT8mh52EQduMaEwrkL_OWJKMRsfwjGjYSpRBlZ1JDaBjTRFJHK6nc3h7Df_ewEX8XvmvbWbC3KO9R3Wzz8-jDjRXDvvSfLP0DDBhoo8LSWAeOg&q=ocpc+xt+ii+ddr4+3200mhz+16gb+desktop+ram&sa=X&sqi=2&ved=2ahUKEwiq7JDuiIiQAxVcTWwGHan5Mb0QtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
+          link: "https://www.google.com/search?sca_esv=ba722af899ebaa25&sxsrf=AE3TifOJqSI0GXFZTnqnh3rjQXbkxSXvOQ:1759602724853&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1xGdzU5Cnyn-oUzTul2B5TXRzAeIy3FI7wzggwHPeZE6A_YjAVf9uE0nNdQlAcGqqj5AFYH9gBj6Gco72idWfDSHyBqtc2Mn9Wkv0Fc0g3se9_tqrCpEpg1Mk49vFKkgil7s-SQ&q=OCPC+XT+II+DDR4+3200MHz+8GB+Desktop+RAM&sa=X&ved=2ahUKEwilhvH6louQAxVoyTgGHe8EL8kQtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Graphics Card",
-          name: "Zotac GAMING GeForce RTX 3050 Twin Edge OC 6GB GDDR6 Graphics Card",
-          price: 25900,
-          img: "https://www.startech.com.bd/image/cache/catalog/graphics-card/zotac/gaming-geforce-rtx-3050-twin-edge-oc-6gb/gaming-geforce-rtx-3050-twin-edge-oc-6gb-01-500x500.webp",
-          link: "",
+          name: "MSI GeForce RTX 3060 VENTUS 2X OC 12GB Graphics Card",
+          price: 39500,
+          img: "https://www.startech.com.bd/image/cache/catalog/graphics-card/msi/rtx-3060-ventus-2x-oc-12gb/rtx-3060-ventus-2x-oc-12gb-228x228.jpg",
+          link: "https://www.google.com/search?sca_esv=ba722af899ebaa25&sxsrf=AE3TifPyIiRAechm5x6fp8rHSZN77ilHCw:1759602873949&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=MSI+GeForce+RTX+3060+VENTUS+2X+OC+12GB+Graphics+Card&sa=X&ved=2ahUKEwiMmv3Bl4uQAxXj9zgGHV5tJfMQtKgLegQIGRAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Storage (SSD)",
@@ -111,14 +111,14 @@
           name: "Pc Power Obsidian PS-O-500-B 500W Non Modular 80 Plus Bronze Power Supply (Black)",
           price: 3300,
           img: "https://techlandbd.com/cache/images/uploads/products/P3512506178/cover_cache_optimize-50.webp",
-          link: "",
+          link: "https://www.google.com/search?sca_esv=ba722af899ebaa25&sxsrf=AE3TifP00jDUuYHDpk_NaxMT1eKCbrQuAA:1759602894688&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=Pc+Power+Obsidian+PS-O-500-B+500W+Non+Modular+80+Plus+Bronze+Power+Supply+(Black)&sa=X&ved=2ahUKEwi6gu_Ll4uQAxUy4zgGHVGlHeIQtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Casing",
-          name: "Value-Top TYPHOON F5 ATX Gaming Case (Black)",
-          price: 3450,
-          img: "https://techlandbd.com/cache/images/uploads/products/P1092506135/cover_cache_optimize-50.webp",
-          link: "https://www.google.com/search?sca_esv=1001961491ba09a8&sxsrf=AE3TifMsEROYv7jiYx7k45fTFJn8aecgBg:1759496739420&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1xGdzU5Cnyn-oUzTul2B5TXRzAeIy3FI7wzggwHPeZE6A_YjAVf9uE0nNdQlAcGqqj5AFYH9gBj6Gco72idWfDSHyBqtc2Mn9Wkv0Fc0g3se9_tqrCpEpg1Mk49vFKkgil7s-SQ&q=Value-Top+TYPHOON+F5+ATX+Gaming+Case&sa=X&ved=2ahUKEwj3wYuRjIiQAxXCTWwGHfieHKAQtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
+          name: "Gamdias TALOS E3 Mid Tower ARGB Case (Black)",
+          price: 4300,
+          img: "https://www.startech.com.bd/image/cache/catalog/casing/gamdias/talos-e3/talos-e3-01-500x500.png",
+          link: "https://www.google.com/search?sca_esv=ca4c92f34e7bc8c4&sxsrf=AE3TifN-aUL0LqNsxRoQ5t9pnt_KX3vWEQ:1759590985429&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=gamdias+talos+e3+mid+tower+argb+case&sa=X&sqi=2&ved=2ahUKEwjBv4ud64qQAxXj3DgGHRRxGUYQtKgLegQIEhAB&biw=1536&bih=776&dpr=1.25",
         },
       ];
 
