--- a/index.html
+++ b/index.html
@@ -87,17 +87,17 @@
         },
         {
           type: "RAM",
-          name: "OCPC XT II DDR4 3200MHz 8GB Desktop RAM (2 x 8GB)",
+          name: "OCPC XT II DDR4 3200MHz 16GB (2 x 8GB) Desktop RAM",
           price: 6200,
           img: "https://www.startech.com.bd/image/cache/catalog/ram/ocpc/xt-ii-ddr4-3200-16gb/xt-ii-ddr4-3200-16gb-500x500.webp",
           link: "https://www.google.com/search?sca_esv=ba722af899ebaa25&sxsrf=AE3TifOJqSI0GXFZTnqnh3rjQXbkxSXvOQ:1759602724853&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1xGdzU5Cnyn-oUzTul2B5TXRzAeIy3FI7wzggwHPeZE6A_YjAVf9uE0nNdQlAcGqqj5AFYH9gBj6Gco72idWfDSHyBqtc2Mn9Wkv0Fc0g3se9_tqrCpEpg1Mk49vFKkgil7s-SQ&q=OCPC+XT+II+DDR4+3200MHz+8GB+Desktop+RAM&sa=X&ved=2ahUKEwilhvH6louQAxVoyTgGHe8EL8kQtKgLegQIFxAB&biw=1536&bih=776&dpr=1.25",
         },
         {
-          type: "Graphics Card",
-          name: "MSI GeForce RTX 3060 VENTUS 2X OC 12GB Graphics Card",
-          price: 39500,
-          img: "https://www.startech.com.bd/image/cache/catalog/graphics-card/msi/rtx-3060-ventus-2x-oc-12gb/rtx-3060-ventus-2x-oc-12gb-228x228.jpg",
-          link: "https://www.google.com/search?sca_esv=ba722af899ebaa25&sxsrf=AE3TifPyIiRAechm5x6fp8rHSZN77ilHCw:1759602873949&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=MSI+GeForce+RTX+3060+VENTUS+2X+OC+12GB+Graphics+Card&sa=X&ved=2ahUKEwiMmv3Bl4uQAxXj9zgGHV5tJfMQtKgLegQIGRAB&biw=1536&bih=776&dpr=1.25",
+          type: "GPU",
+          name: "AMD Radeon RX 6600 Gaming 8GB",
+          price: 27500,
+          img: "https://www.computervillage.com.bd/image/cache/catalog/Sapphire/sapphire-pulse-amd-radeon-rx-6600-gaming-graphics-card-1100x1100.jpg.webp",
+          link: "https://www.google.com/search?sca_esv=cbc34f4c87f9b8c6&sxsrf=AE3TifN83uJzcrnkVOtDAzaRl1QaJ7zOmQ:1759684171131&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=AMD+Radeon+RX+6600&sa=X&ved=2ahUKEwihtr-vxo2QAxX48DgGHVh7O-sQtKgLegQIGBAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Storage (SSD)",
@@ -124,10 +124,11 @@
 
       const peripherals = [
         {
-          type: "......",
-          name: "......",
-          price: 0,
-          img: "https://via.placeholder.com/200x150?text=Monitor",
+          type: "Monitor",
+          name: "PC Power PCM22FRX",
+          price: 13500,
+          img: "https://www.startech.com.bd/image/cache/catalog/monitor/pc-power/pcm22frx/pcm22frx-01-500x500.webp",
+          link: "https://www.google.com/search?sca_esv=8e6f3f0e2a5f3b1c&sxsrf=AE3TifPZVYk1JHk1X1Yk1JHk1X1Yk1JHk1X:1759684471131&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=PC+Power+PCM22FRX&sa=X&ved=2ahUKEwiRrM3FlouQAxXhQjABHfKTAEEQtKgLegQIGBAB&biw=1536&bih=776&dpr=1.25",
         },
       ];
 
