--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
         },
         {
           type: "GPU",
-          name: "AMD Radeon RX 6600 Gaming 8GB",
-          price: 27500,
-          img: "https://www.computervillage.com.bd/image/cache/catalog/Sapphire/sapphire-pulse-amd-radeon-rx-6600-gaming-graphics-card-1100x1100.jpg.webp",
-          link: "https://www.google.com/search?sca_esv=cbc34f4c87f9b8c6&sxsrf=AE3TifN83uJzcrnkVOtDAzaRl1QaJ7zOmQ:1759684171131&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOhYPURIv2wPgv_w_sE_0Sc6QqqU7k8cSQndc5mTXCIWHa5yWh8UZLeaMB2TzsL707pcnajOVzuG8nS7sxlcHlHT7piY8EJN1nt_1OxpO-4jRCM7y46MmzzMDHqGNST6xFea_Jb9OOjWE_EbrmKsB62WJGHF5nA&q=AMD+Radeon+RX+6600&sa=X&ved=2ahUKEwihtr-vxo2QAxX48DgGHVh7O-sQtKgLegQIGBAB&biw=1536&bih=776&dpr=1.25",
+          name: "MSI GeForce RTX 3050 VENTUS 2X 6G OC GDDR6 Graphics Card",
+          price: 23500,
+          img: "https://www.startech.com.bd/image/cache/catalog/graphics-card/msi/geforce-rtx-3050-ventus-2x-6g-oc/geforce-rtx-3050-ventus-2x-6g-oc-01-228x228.webp",
+          link: "https://www.google.com/search?sca_esv=6146ca317b294b83&sxsrf=AE3TifPbTFHB0hlZ_zR5LcX4jZ4iA4ll9w:1759820116487&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeoJTKjrFjVxydQWqI2NcOha3O1YqG67F0QIhAOFN_ob1aWGQOelbxvw0PKo40QtwvZMGAT8mh52EQduMaEwrkL_OWJKMRsfwjGjYSpRBlZ1JDaBjTRFJHK6nc3h7Df_ewEX8XvmvbWbC3KO9R3Wzz8-jDjRXDvvSfLP0DDBhoo8LSWAeOg&q=MSI+GeForce+RTX+3050+VENTUS+2X+6G+OC+GDDR6+Graphics+Card&sa=X&ved=2ahUKEwjOwKXnwJGQAxXESWwGHemaFAYQtKgLegQIGBAB&biw=1536&bih=776&dpr=1.25",
         },
         {
           type: "Storage (SSD)",
